--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -134,7 +134,7 @@ a:hover {
 .sb2-1 {
     float: left;
     width: 20%;
-    background: #e8edf2;
+    background: #FFFFFF;
     color: #fff;
     height: 90%;
     position: fixed;
